--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,30 @@
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.1</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <executions>
+                    <execution>
+                        <id>enforce-versions</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireJavaVersion>
+                                    <!--
+                                        The last JDK to support 1.5 was JDK9,
+                                        but JDK9 introduces incompatible changes
+                                    -->
+                                    <version>[1.5,9)</version>
+                                </requireJavaVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
