--- a/container-test/src/main/webapp/WEB-INF/web.xml
+++ b/container-test/src/main/webapp/WEB-INF/web.xml
@@ -55,11 +55,14 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <servlet>
+        <servlet-name>Settest</servlet-name>
+        <servlet-class>org.tuckey.web.filters.urlrewriteviacontainer.SettestServlet</servlet-class>
+    </servlet>
 
-
-
-
-
-
+    <servlet-mapping>
+        <servlet-name>Settest</servlet-name>
+        <url-pattern>/settest.jsp</url-pattern>
+    </servlet-mapping>
 
 </web-app>
